Quick and dirty fix for entry menu align

--- a/css/app/calendarlist.css
+++ b/css/app/calendarlist.css
@@ -184,6 +184,10 @@
 	width: 75%;
 }
 
+.app-navigation-entry-menu {
+	right: 10px !important;
+}
+
 #app-navigation .app-navigation-entry-menu li {
 	width: auto !important;
 	float: inherit;
